added logo, welcome logo, headshot, about me & contact nav menu

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
 .App {
-  text-align: center;
+   text-align: center;
 }
 
-.App-logo {
-  height: 20vmin;
-  pointer-events: none;
+.Welcome-logo {
+   height: 15vmin;
+   pointer-events: none;
+   margin: 20px;
+   padding: 10px;
+}
+
+.bodyfont {
+   font-family: 'Montserrat', sans-serif;
+   
+}
+
+h1 {
+   margin: 0 0 1rem 0;
+   font-weight: 600;
+   font-size: 2rem;
+   color: #244e70;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+   .Welcome-logo {
+      animation: Welcome-logo-spin infinite 20s linear;
+   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+   background-color: #282c34;
+   min-height: 8vh;
+   display: flex;
+   align-items: left;
+   justify-content: left;
+   font-size: calc(10px + 2vmin);
+   color: rgb(154, 196, 221);
+   padding: 0;
+   margin: 0;
 }
+
+.body-background{
+   background-image: url( "./img/background.jpg" );
+   background-size: cover;
+   background-repeat: no-repeat;
+   height: 100vh;
+}
+
 
 .App-link {
-  color: #61dafb;
+   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes Welcome-logo-spin {
+   from {
+      transform: rotate(0deg);
+   }
+   to {
+      transform: rotate(360deg);
+   }
 }
