--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,17 @@ main {
 
 .welcome-font-size {
    font-size: 2rem;
+   color: var( --default-color );
+}
+
+.contact-font-size{
+   font-size: 1.5rem;
+   color: var( --default-color );
+}
+
+.contact-body-font-size {
+   font-size: small;
+   color: var( --default-color );
 }
 
 .welcome-body-font-size{
@@ -171,6 +182,12 @@ h2 {
 
 .container, .content {
    position: relative;
+}
+
+.error-font {
+   font-size: small;
+   font-weight: bold;
+   color: rgb(204, 52, 52);
 }
 
 .footer {
