--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ main {
    color: rgb(184, 55, 83)
 }
 
-.navbar-font-size{
+.small-font-size{
    font-size: small;
 }
 
@@ -86,6 +86,10 @@ main {
 
 .body-font {
    font-family: 'Montserrat', sans-serif;
+   color: var( --default-color );
+}
+
+.default-text-color {
    color: var( --default-color );
 }
 
