--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@ main {
    width: 100%;
 }
 
+.bg-color {
+   background-color: var( --default-color );
+}
+
 .nav-container {
    position: relative;
 }
